--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "babel-core": "^6.22.1",
     "babel-eslint": "^7.1.1",
     "babel-loader": "^6.2.10",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-assign": "^6.22.0",
     "babel-polyfill": "^6.22.0",
     "babel-preset-env": "^1.6.1",
