--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
   "dependencies": {
     "3d-force-graph": "^1.28.4",
     "d3-force-3d": "^1.1.0",
+    "lodash": "^4.17.10",
     "three": "^0.90.0",
     "three-spritetext": "^1.0.1"
   }
